--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <!-- Slide 0: Intro -->
             <div class="slide">
                 <h1 class="main-headline">Happy<br>Birthday <br> Cantikkuuu🩵</h1>
-                <p class="sub-caption">Akhirnya yaa yang ditunggu" <br>Hari ini 2 Februari 2026 <br>Aslii sii bener" hari yang aku tungguin banget, pengen rayain ultahnya adee <br> Aku berharep banget kmu sukaa sma yg aku kasii... <br> semoga yaa</p>
+                <p class="sub-caption">Akhirnya yaa yang ditunggu" <br>Hari ini 2 Februari 2026 <br>Aslii sii bener" hari yang aku tungguin banget, pengen rayain ultahnya adee hehe<br> Aku berharep banget kmu sukaa sma yg aku kasii... <br> semoga yaa</p>
                 <div style="font-size: 4rem; margin-top: 30px;"></div>
             </div>
 
@@ -791,3 +791,4 @@
     </script>
 </body>
 </html>
+
