Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                     <div class="photo-card"><img src="img/7.jpeg" alt="Cover 2"></div>
 
                 </div>
-                <div class="tap-hint">Tap to open Gallery ✨</div>
+                <div class="tap-hint">Tap to open your Memories ✨</div>
             </div>
 
             <!-- Slide 3: Wish -->
@@ -495,7 +495,7 @@
                 <div class="final-slide-container">
                     <div class="final-text-group">
                         <h3 class="final-title">Happy Birthday<br><span style="color: #87CEEB;">Aizyra Amalya Garnis</span></h3>
-                        <p class="final-subtitle">Semoga suka yaa sma yg aku kasii,<br>I love u to the moon and back 🩵</p>
+                        <p class="final-subtitle">Semoga suka yaa sma kadonyaaa,<br>I love u to the moon and back 🚀🌕🩵</p>
                     </div>
                     
                     <!-- Interactive Final Cat -->
@@ -515,7 +515,7 @@
             <img src="" id="cat-img" alt="Cat Mascot">
         </div>
 
-        <div class="swipe-hint" id="nav-hint">Geser kiri ➡</div>
+        <div class="swipe-hint" id="nav-hint">Swipe left ← </div>
         <canvas id="confetti-canvas"></canvas>
 
     </div>
@@ -791,4 +791,5 @@
     </script>
 </body>
 </html>
+
 
